--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
             </a>
             <hr class="sidebar-divider my-0">
             <ul class="nav navbar-nav text-light" id="accordionSidebar">
-                <li class="nav-item" role="presentation" id="initialiser"><a class="nav-link active" href="#"><i class="fas fa-tachometer-alt"></i><span>initialisation</span></a></li>
-                <li class="nav-item" role="presentation" id="rechercher"><a class="nav-link" href="#"><i class="fas fa-user"></i><span>Recherche</span></a></li>
-                <li class="nav-item" role="presentation" id="supprimer"><a class="nav-link" href="#"><i class="fas fa-table"></i><span>Supperession</span></a></li>
+è                <li class="nav-item" role="presentation" id="rechercher"><a class="nav-link" href="#"><i class="fas fa-user"></i><span>Recherche</span></a></li>
                 <li class="nav-item" role="presentation" id="inserer"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>Insertion</span></a></li>
 
             </ul>
