afetr few upgrades to the animation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </a>
             <hr class="sidebar-divider my-0">
             <ul class="nav navbar-nav text-light" id="accordionSidebar">
-è                <li class="nav-item" role="presentation" id="rechercher"><a class="nav-link" href="#"><i class="fas fa-user"></i><span>Recherche</span></a></li>
+                <li class="nav-item" role="presentation" id="rechercher"><a class="nav-link" href="#"><i class="fas fa-user"></i><span>Recherche</span></a></li>
                 <li class="nav-item" role="presentation" id="inserer"><a class="nav-link" href="#"><i class="far fa-user-circle"></i><span>Insertion</span></a></li>
 
             </ul>
@@ -137,18 +137,17 @@
                 </div>
             </nav>
             <div  class="fichier"  >
-                <div id="hashage"></div>
+                <div id="hashage"><div id="calculadr"></div></div>
                 <div id="espace"></div>
-                    <div id="information" ></div>
+                  <div id="information" ></div>
+                <div id="information2" ><p id="1">calcule_adress(cle)</p> <p id="2">verification si le bloc est plein</p>  <p id="3">si oui: insertion dans bloc</p>  <p id="4"> sinon insertion dans la zone de debordement </p>    <p></p>  <p></p>  <p></p>   </div>
+                <div></div>
+
 
             </div>
 
         </div>
-        <footer class="bg-white sticky-footer">
-            <div class="container my-auto">
-                <div class="text-center my-auto copyright"><span>Copyright © Brand 2020</span></div>
-            </div>
-        </footer>
+
     </div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div>
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
