--- a/index.html
+++ b/index.html
@@ -138,14 +138,12 @@
             </nav>
             <div  class="fichier"  >
                 <div id="hashage"><div id="calculadr"></div></div>
-                <div id="espace"></div>
-                <div id="container">
-                  <div id="information" ></div>
-                <div id="information2" ><p id="1">calcule_adress(cle)</p> <p id="2">verification si le bloc est plein</p>  <p id="3">si oui: insertion dans bloc</p>  <p id="4"> sinon insertion dans la zone de debordement </p>    <p></p>  <p></p>  <p></p>   </div>
-                </div>
+                <div id="information" ></div>
+                <div id="information2" > &nbsp  &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp &nbsp &nbsp  &nbsp ALGO ZONE </div>
 
 
             </div>
+            <div id="espace"></div>
 
         </div>
 
